--- a/future_elderly_model_with_shiny.rmd
+++ b/future_elderly_model_with_shiny.rmd
@@ -1,5 +1,6 @@
 ---
 title: "Future Elderly Health Model"
+author: "William Parker, william.parker@uchospitals.edu"
 output: html_document
 runtime: shiny
 ---
@@ -110,27 +111,29 @@ total_cost <- function(data, start_year = 65, stop_year = 100, healthy = 100, si
 ```
 
 
-A simple version of the [RAND FEM](https://www.rand.org/pubs/research_briefs/RB9324/index1.html)
+A simple version of the [RAND FEM](https://www.rand.org/pubs/research_briefs/RB9324/index1.html) inspired by a homework question in chapter 19 of [Health Economics](https://www.macmillanihe.com/companion/Bhattacharya-Health-Economics/) by Jay Battacharya, Timothy Hyde, Peter Tu (2014).
 
-There are four states in this model
+The FED model simulates the aging and death process for elderly people. There are four states individuals can assume:
 
 * Healthy
 * Sick (from cancer)
-* Disabled
+* Disabled (from a stroke)
 * Dead
 
+Individuals begin the simulation healthy at the specified starting age. Each year, individuals transition between states with the probabilities indicated in the model schematic below.
 
 **Model Schematic**
 ![ ](model_overview.png)
 
 
-
 # Set Parameters
-The modifiable parameters in this model include
+Modify the model parameters in the menu below. Options include
 
-* transition probabilites **(\(\delta \; \rho \; \gamma \; \eta\))**
-* number of adults
+* state transition probabilites **(\(\delta \; \rho \; \gamma \; \eta\))**
+* number of adults in the simulation
+* the starting and stopping age for the simulation
 * cost of each state
+
 
 ```{r enter_parameters, echo = FALSE}
 
